styles.css
* {
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

body {
    margin: 0;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    flex: 1;
    align-content: center;
}

/* Group Padding for consistency and uniformity */
.header,
.body-1,
.body-2,
/* .body-3, */
/* .body-4, */
.info-blocks,
.footer {
    padding: 12px 200px;
}

/* Group Padding larger */
.body-2
.body-3 {
    padding: 24px 400px;
}

/* fonts start */
.logo {
    font-size: 24px;
    color: #f9faf8;
    font-weight: 900;
}

.title {
    font-size: 48px;
    color: #f9faf8;
    font-weight: 900;
}

.header-links,
.title-info {
    font-size: 18px;
    color: #e5e7eb;
}
/* fonts end */


.header {
    display: flex;
    justify-content: space-between;
    align-items: center;
   
}

.header-links {
    display: flex;
    list-style: none;
    gap: 24px;
}

.body-1 {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 40px;
    padding-bottom: 48px;
}

.card-1 {
    /* gap: 12px; */
    display: flex;
    flex-direction: column;
}

.title-info {
    padding-bottom: 12px;
}


.body-1-button {
    height: 32px;
    width: 112px;
    background-color: #3882f6;
    color: #f9faf8;
    border-radius: 5px;
}

.body-2 {
    display: flex;
    flex-direction: column;
    align-items: center;
    
}

.title-body-2 {
    font-size: 36px;
    font-weight: 900;
    color: #1f2937;
    padding-bottom: 24px;
}

.info-blocks {
    display: flex;
    gap: 40px;
    padding-bottom: 32px;
    width: 1000px;
    justify-content: center;
    flex-wrap: wrap;
    /* flex-wrap: wrap;
    align-items: center; */
}

.block {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 200px;
    
}

.info-blocks img {
    border-radius: 10px;
    border-color: #3882f6;
    border-style: solid;
}

.info-blocks div {
    text-align: center;
}

.body-3 {
    background-color: #e5e7eb;
    display: flex;
    flex-direction: column;
    align-items: center;   
    color: #1f2937;
    padding-top: 64px;
    padding-bottom: 64px;
}

.quote-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 900px;
}

.quote {
    font-style: italic;
    font-size: 36px;
}

.quote-ref {
    font-weight: 900;
    font-size: 18px;
    align-self: flex-end;
}

.body-4 {
    padding: 48px 280px;
    color: #f9faf8;
}

.exclamation {
    font-weight: 700;
}

.exclamation-info {
    font-size: small;
}

.body-4-card {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 24px 72px;
    background-color: #3882f6;
    border-radius: 10px;
}

.body-4-button {
    height: 32px;
    width: 112px;
    background-color: #3882f6;
    border-style: solid;
    border-color: #f9faf8;
    color: #f9faf8;
    border-radius: 5px;
    flex-shrink: 0;
}

.footer {
    display: flex;
    justify-content: center;
    align-content: center;
    padding: 24px 0;
}

.header,
.body-1,
.footer {
    background-color: #1f2937;
    color: white;
}

.header-links {
    margin: 0;
}

/* REVISIT FLEX SHORTHAND VALUES, REMOVE GROUP PADDING */

